// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login render correctly Login closed 1`] = `
<div
  className="log-in "
  onClick={[Function]}
>
  <form
    action="#"
    className="log-in__form"
    onClick={[Function]}
  >
    <div
      className="log-in__logo"
    />
    <button
      className="log-in__close"
      onClick={[Function]}
      type="button"
    >
      <span
        className="visually-hidden"
      >
        Закрыть окно
      </span>
    </button>
    <label
      className="log-in__label log-in__label--login"
    >
      Логин
      <input
        autoFocus={true}
        className="log-in__input log-in__input--login"
        id="login"
        name="login"
        onChange={[Function]}
        required={true}
        type="text"
        value=""
      />
    </label>
    <label
      className="log-in__label log-in__label--password"
    >
      Пароль
      <input
        className="log-in__input log-in__input--password"
        id="password"
        name="password"
        onChange={[Function]}
        required={true}
        type="password"
        value=""
      />
    </label>
    <button
      className="log-in__show-password"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    />
    <button
      className="log-in__submit"
      type="submit"
    >
      Войти
    </button>
    <a
      className="log-in__restore-password"
      href="#top"
    >
      Забыли пароль?
    </a>
  </form>
</div>
`;

exports[`Login render correctly Login opened 1`] = `
<div
  className="log-in log-in--opened"
  onClick={[Function]}
>
  <form
    action="#"
    className="log-in__form"
    onClick={[Function]}
  >
    <div
      className="log-in__logo"
    />
    <button
      className="log-in__close"
      onClick={[Function]}
      type="button"
    >
      <span
        className="visually-hidden"
      >
        Закрыть окно
      </span>
    </button>
    <label
      className="log-in__label log-in__label--login"
    >
      Логин
      <input
        autoFocus={true}
        className="log-in__input log-in__input--login"
        id="login"
        name="login"
        onChange={[Function]}
        required={true}
        type="text"
        value=""
      />
    </label>
    <label
      className="log-in__label log-in__label--password"
    >
      Пароль
      <input
        className="log-in__input log-in__input--password"
        id="password"
        name="password"
        onChange={[Function]}
        required={true}
        type="password"
        value=""
      />
    </label>
    <button
      className="log-in__show-password"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    />
    <button
      className="log-in__submit"
      type="submit"
    >
      Войти
    </button>
    <a
      className="log-in__restore-password"
      href="#top"
    >
      Забыли пароль?
    </a>
  </form>
</div>
`;
